change div to header tag

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 	<title>Broadway</title>
 </head>
 <body>
-	<div class="header">
-	<h1>Broadway Design</h1>
-	</div>
+	<header>
+	  <h1>Broadway Design</h1>
+	  
+	</header>
+
 
 </body>
 </html>
