--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 <body>
 	<header>
 	  <h1>Broadway Design</h1>
-	  
+	  <ul>
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Process</a></li>
+  <li><a href="#">Team</a></li>
+  <li><a href="#">Contact</a></li>
+</ul>
 	</header>
 
 
