make new div class content

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 <body>
 	<header>
 	  <h1>Broadway Design</h1>
-	  <ul>
+	  <ul class="navbar">
   <li><a href="#">Home</a></li>
   <li><a href="#">Process</a></li>
   <li><a href="#">Team</a></li>
   <li><a href="#">Contact</a></li>
 </ul>
 	</header>
+
+	<div class="content">
+		<
+		
+	</div>
 
 
 </body>
