--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	</header>
 
 	<div class="content">
-		<
+		<h2>Our Process</h2>
+		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+		<p>We focus on the most important details</p>
+		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
 		
 	</div>
 
