--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 	<div class="content">
 		<h2>Our Process</h2>
 		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
-		<p>We focus on the most important details</p>
+		<p>We focus on the most important details.</p>
 		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
+		<p>We study our projects inside and out.</p>
+
 		
 	</div>
 
