--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		<p>We focus on the most important details.</p>
 		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
 		<p>We study our projects inside and out.</p>
+		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
+		<p>We put everything we have into our work.</p>
 
 		
 	</div>
