--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<div class="content">
 		<h2>Our Process</h2>
 		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
+		<h3>Identify</h3>
 		<p>We focus on the most important details.</p>
 		<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
 		<p>We study our projects inside and out.</p>
@@ -24,6 +25,11 @@
 		<p>We put everything we have into our work.</p>
 
 		
+	</div>
+
+	<div class="3rd part">
+		<h2>Designed in New York</h2>
+
 	</div>
 
 
