--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 		<h2>Designed in New York</h2>
 		<h3>Portfolio</h3>
 		<p>coming soon</p>
+
+		<h3>Team</h3>
+		<p>We're hiring!</p>
 		
+
 
 	</div>
 
