add new p under contact h2

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
 
 		<h3>Team</h3>
 		<p>We're hiring!</p>
-		
+
+		<h3>Contact</h3>
+		<p>
+			Phone:(555)-555-5555
+			E-mail: test@example.com
+			Twitter: @test
+		</p>
+
+
 
 
 	</div>
