add footer,link in head and copyright icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Broadway</title>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
 	<header>
@@ -44,7 +45,15 @@
 			Twitter: @test
 		</p>
 	<footer>
-		
+		<i class="far fa-copyright"></i>
+		 <ul class="nav">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Process</a></li>
+  <li><a href="#">Team</a></li>
+  <li><a href="#">Contact</a></li>
+</ul>
+	</header>
+
 	</footer>
 
 
