--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 		</p>
 	<footer>
 		<i class="far fa-copyright"></i>
-		 <ul class="nav">
-  <li><a href="#">Home</a></li>
-  <li><a href="#">Process</a></li>
-  <li><a href="#">Team</a></li>
-  <li><a href="#">Contact</a></li>
-</ul>
+		 <div class="nav">
+  <a href="#">Home</a>
+  <a href="#">Process</a>
+  <a href="#">Team</a>
+  <a href="#">Contact</a>
+</div>
 	</header>
 
 	</footer>
