cut and paste i tag containing copyright in navbar div

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 			Twitter: @test
 		</p>
 	<footer>
-		<i class="far fa-copyright"></i>
-		 <div class="nav">
+		
+		 <div class="nav"><i class="far fa-copyright"></i>
   <a href="#">Home</a>
   <a href="#">Process</a>
   <a href="#">Team</a>
