insert p in i tag and write broadway

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</p>
 	<footer>
 		
-		 <div class="nav"><i class="far fa-copyright"></i>
+		 <div class="nav"><i class="far fa-copyright"><p class="info">Broadway 2016</p></i>
   <a href="#">Home</a>
   <a href="#">Process</a>
   <a href="#">Team</a>
