link style.css and change header tag to div with an id of header

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title>Broadway</title>
+	<link rel="stylesheet" type="text/css" href="C:\Users\sarita\excursion\resources\css\style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
-	<header>
+	<div id="header">
 	  <h1>Broadway Design</h1>
 	  <ul class="navbar">
   <li><a href="#">Home</a></li>
@@ -13,7 +14,7 @@
   <li><a href="#">Team</a></li>
   <li><a href="#">Contact</a></li>
 </ul>
-	</header>
+	</div>
 
 	<div class="content">
 		<h2>Our Process</h2>
