change style.css path in html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Broadway</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\sarita\excursion\resources\css\style.css">
+	<link rel="stylesheet" type="text/css" href="C:\Users\sarita\broadway\resources\css\style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </head>
 <body>
