change div id to div class

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<title>Broadway</title>
-	<link rel="stylesheet" type="text/css" href="C:\Users\sarita\broadway\resources\css\style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+	<link rel="stylesheet" type="text/css" href="C:\Users\sarita\broadway\ressources\css\style.css">
 </head>
 <body>
-	<div id="header">
+
+	<div class="header">
 	  <h1>Broadway Design</h1>
 	  <ul class="navbar">
   <li><a href="#">Home</a></li>
